# snitchos

./: .gitignore  .itest-baseline.toml  .snemu-itest-durations  Cargo.toml  OPINIONS.md  README.md  clippy.toml  rust-toolchain.toml
abi/: Cargo.toml
abi/src/: lib.rs
collector/: Cargo.toml  README.md
collector/src/: caps.rs  lib.rs  loki.rs  main.rs  otlp.rs  prom.rs  state.rs  url.rs
diagram/: Cargo.toml
diagram/src/: caps.rs  deps.rs  fold.rs  itest_matrix.rs  lib.rs  markdown.rs  model.rs  switches.rs  trace.rs
fs-proto/: Cargo.toml
fs-proto/src/: lib.rs  markers.rs
hitch/: Cargo.toml  README.md
hitch-pod/: Cargo.toml
hitch-pod/src/: lib.rs
hitch-pod/tests/: pod_bytes.rs
hitch/src/: lib.rs
hitch/tests/: compatible.rs  const_schema.rs  decode.rs  derive.rs  manifest.rs  model.rs  packed.rs  pod.rs  pod_derive.rs  roundtrip.rs  satisfy.rs  schema.rs  schema_trait.rs  slots.rs  widths.rs
itest-harness/: Cargo.toml  README.md
itest-harness/src/: aggregate.rs  baseline.rs  history.rs  lib.rs  lock.rs  metrics.rs  otlp.rs  prom.rs  runner.rs  signature.rs  stats.rs  test_support.rs  verdict.rs
kernel/: Cargo.toml  build.rs  linker.ld  linker.ld.in
kernel-boot/: Cargo.toml
kernel-boot/src/: banner.rs  bootargs.rs  harts.rs  lib.rs  trap.rs
kernel-core/: Cargo.toml
kernel-core/fixtures/: faulter.elf  hello.elf
kernel-core/src/: bootargs.rs  cap.rs  clock.rs  elf.rs  frame.rs  fwcfg.rs  heap.rs  heap_smoke.rs  intern.rs  ipc.rs  lib.rs  mem.rs  mmu.rs  notify.rs  obs.rs  panic_log.rs  preinit.rs  ramfb.rs  reap.rs  sched.rs  span.rs  stack.rs  supervision.rs  trap.rs  user.rs  virtio.rs  workload.rs  workloads.rs
kernel-core/src/mem/: frame.rs  heap.rs  mmu.rs
kernel-core/src/obs/: intern.rs  sink.rs
kernel-core/src/user/: cap.rs  elf.rs  ipc.rs  metric.rs  span_name.rs
kernel-core/src/workloads/: bootargs.rs
kernel-core/tests/: loom_tx.rs
kernel-devices/: Cargo.toml
kernel-devices/src/: console.rs  framebuffer.rs  fwcfg.rs  lib.rs  uart.rs  virtio.rs
kernel-devices/tests/: loom_tx.rs
kernel-mem/: Cargo.toml
kernel-mem/src/: frame.rs  heap_smoke.rs  lib.rs  mmu.rs
kernel-obs/: Cargo.toml
kernel-obs/src/: batch_ring.rs  intern.rs  lib.rs  panic_log.rs  span.rs
kernel-proc/: Cargo.toml
kernel-proc/src/: cap.rs  elf.rs  ipc.rs  lib.rs  metric.rs  notify.rs  reap.rs  sched.rs  span_name.rs  stack.rs  timeout.rs
kernel/src/: banner.rs  boot_workload.rs  console.rs  deflake.rs  demo_tasks.rs  device.rs  dtb.rs  entry.S  frame.rs  heap.rs  heap_smoke.rs  heartbeat.rs  ipc.rs  ipi.rs  main.rs  mmu.rs  obs.rs  panic.rs  percpu.rs  process.rs  sbi.rs  sched.S  sched.rs  secondary.S  secondary.rs  smp.rs  storms.rs  tracing.rs  trap.S  trap.rs  uart.rs  user.rs  virtio_console.rs  workload.rs
kernel/src/device/: console.rs  fwcfg.rs  mod.rs  ramfb.rs  uart.rs  virtio_console.rs
kernel/src/mem/: frame.rs  heap.rs  heap_smoke.rs  mmu.rs  mod.rs
kernel/src/obs/: counter.rs  heartbeat.rs  mod.rs  tracing.rs
kernel/src/sched/: demo_tasks.rs  mod.rs  process.rs  sched.S  smoke.rs
kernel/src/smp/: ipi.rs  percpu.rs  secondary.rs  sync.rs
kernel/src/syscall/: cap.rs  clock.rs  console.rs  debug.rs  ipc.rs  mem.rs  metric.rs  mod.rs  notify.rs  process.rs  span.rs  transfer.rs
kernel/src/trap/: ipc.rs  mod.rs  syscall.rs  trap.S  user.rs
kernel/src/workloads/: boot_workload.rs  mod.rs  storms.rs  workload.rs
learning/: Cargo.toml  README.md  concept-map.md  lesson-plan.md  sscratch-trap-switch.md
learning/stitch-parser/: cheat-sheet.md  plan.md  session-log.md
learning/toy-allocator/: Cargo.toml  EXERCISES.md
learning/toy-allocator/proptest-regressions/: buddy.txt  freelist.txt
learning/toy-allocator/src/: bitmap.rs  buddy.rs  freelist.rs  lib.rs
learning/toy-pagetable/: Cargo.toml  EXERCISES.md
learning/toy-pagetable/proptest-regressions/: lib.txt
learning/toy-pagetable/src/: lib.rs
learning/toy-virtqueue/: Cargo.toml  EXERCISES.md
learning/toy-virtqueue/proptest-regressions/: lib.txt
learning/toy-virtqueue/src/: lib.rs
learning/v0.10-fs-badging/: cheat-sheet.md  session-log.md
learning/v0.8-preemption/: cheat-sheet.md  session-log.md
learning/v0.9-ipc/: cheat-sheet.md  session-log.md
protocol/: Cargo.toml  README.md
protocol/src/: lib.rs  stream.rs
protocol/tests/: wire_stability.rs
protocol/tests/snapshots/: wire_stability__wire_encoding_is_stable.snap
ramfs/: Cargo.toml
ramfs/src/: lib.rs
snemu/: Cargo.toml  virt-smp4.dtb  virt.dtb
snemu/src/: bench.rs  block.rs  bus.rs  cpu.rs  csr.rs  decode.rs  decode_cache.rs  dtb.rs  framebuffer.rs  fwcfg.rs  jit.rs  lib.rs  loader.rs  machine.rs  main.rs  mem.rs  mmu.rs  symbols.rs  uart.rs  virtio.rs
snip/: Cargo.toml
snip/src/: lib.rs
snip/tests/: apply.rs  build_prompt.rs  confident.rs  envelope.rs  gather.rs  hunks.rs  parse_reply.rs  pick.rs  pick_two_pass.rs  triage.rs
stitch/: Cargo.toml
stitch/src/: .parser.rs.pending-snap  ast.rs  bridge.rs  check.rs  core_ir.rs  env.rs  interp.rs  lexer.rs  lib.rs  line_edit.rs  lower.rs  main.rs  natives.rs  ops.rs  parser.rs  pattern.rs  platform.rs  prelude.st  registry.rs  render.rs  runner.rs  source.rs  stim.rs  telemetry.rs  test_support.rs  testing.rs  value.rs  wire.rs
stitch/src/snapshots/: stitch__parser__tests__a_parenthesized_nested_conditional_is_allowed.snap  stitch__parser__tests__and_binds_tighter_than_or.snap  (+128 more)
stitch/tests/: builtin_module_use.rs  expressions.rs  memory_churn.rs  programs.rs  stim_fsm.rs
supervision/: Cargo.toml
supervision/src/: lib.rs
xtask/: Cargo.toml  README.md
xtask-cmds/: Cargo.toml
xtask-cmds/src/: audit.rs  lib.rs  links.rs  loc.rs  snip.rs  source.rs
xtask-itest/: Cargo.toml
xtask-itest/src/: itest.rs  main.rs
xtask-qemu/: Cargo.toml
xtask-qemu/src/: lib.rs
xtask-snemu/: Cargo.toml
xtask-snemu/src/: lib.rs  snemu_diff.rs  snemu_profile.rs
xtask/src/: audit.rs  diagram_cmd.rs  itest.rs  links.rs  loc.rs  main.rs  measure.rs  plan.rs  qemu.rs  snemu_bench.rs  snemu_diff.rs  snemu_profile.rs  snip.rs  source.rs
(+415 files in other folders)
