[workspace]
resolver = "2"
members = ["kernel", "kernel-core", "protocol", "collector", "xtask", "itest-harness", "abi", "user/runtime", "user/runtime-macros", "user/hello"]
# `learning/` is a separate, host-targeted workspace of standalone "toy"
# crates for understanding kernel concepts in isolation. Excluded so it
# never participates in the no_std/riscv64 kernel build.
exclude = ["learning"]

# Host-crate lint policy. Opt in per crate via `[lints] workspace = true`
# (kernel-core, protocol, collector, xtask, itest-harness). Pedantic as a
# whole is `warn` — surface idiom hints without blocking the red-green loop.
# The bare-metal `kernel` crate does NOT opt in (full pedantic fights
# register/address idioms).
#
# Allowed members are the boilerplate-tax ones and the `cast_*` family. The
# casts earned their `allow` empirically: this codebase does so much
# legitimate address/size/duration `as` math that the cast lints fire ~200×
# and are overwhelmingly correct-by-context — a blanket warn there is noise,
# not signal. Audit a specific suspect truncation with `try_into()` instead.
[workspace.lints.rust]
# `--cfg loom` is set via RUSTFLAGS for the kernel-core loom model-check
# tests (tests/loom_tx.rs). Declare it so check-cfg doesn't flag the
# `#[cfg(loom)]` gates as unexpected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Exact float compares are intentional in test assertions (computed values
# checked against known-exact expectations); prod logic doesn't do float ==.
float_cmp = "allow"
# Subjective / intentional-style members:
#   unreadable_literal — address/mask constants deliberately mirror the linker
#     script + Sv39 layout; `_` separators would obscure the datasheet match.
#   the rest are taste calls (long-but-cohesive fns, meaningful field prefixes).
unreadable_literal = "allow"
too_many_lines = "allow"
struct_field_names = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
linked_list_allocator = { path = "vendor/linked_list_allocator" }
