[workspace]
resolver = "2"
members = ["kernel", "kernel-mem", "kernel-obs", "kernel-devices", "kernel-boot", "kernel-proc", "protocol", "collector", "stitch", "hitch", "hitch-pod", "hitch-derive", "xtask", "xtask-qemu", "xtask-snemu", "xtask-cmds", "itest-harness", "abi", "fs-core", "ramfs", "fs-proto", "supervision", "user/macros", "user/runtime", "user/std", "user/hello", "user/fs", "snemu", "diagram", "snip", "magnitude"]
# `learning/` is a separate, host-targeted workspace of standalone "toy"
# crates for understanding kernel concepts in isolation. Excluded so it
# never participates in the no_std/riscv64 kernel build.
exclude = ["learning"]

# Workspace lint policy. Pedantic as a whole is `warn` — surface idiom hints
# without blocking the red-green loop.
#
# **Every member opts in** via `[lints] workspace = true` — `LINTS_EXEMPT`
# (`xtask/src/itest.rs`) is empty; even `kernel`, the last holdout, opts in now.
# A future exemption needs a *measured* reason recorded there. Cargo has no
# workspace-wide lint inheritance — the key is structurally per-crate, so
# omitting it is invisible.
# Don't keep the roster here: this comment listed nine opt-ins long after there
# were twenty-plus, which is exactly the drift that let `snitchos-user`,
# `snitchos-std` and `snitchos-user-macros` sit un-linted. The
# `every_workspace_member_opts_in_or_has_a_written_reason` test is the roster
# now, and it fails when a new crate forgets.
#
# **Being bare-metal is NOT a reason to opt out.** The `cast_*` and
# `unreadable_literal` allows below are precisely the bare-metal accommodation;
# once they apply, `hello` and `fs` measure zero register/address-idiom hits.
# The old "pedantic fights register idioms" reason was measured false and
# removed — it had already propagated into three unjustified exemptions.
#
# Allowed members are the boilerplate-tax ones and the `cast_*` family. The
# casts earned their `allow` empirically: this codebase does so much
# legitimate address/size/duration `as` math that the cast lints fire ~200×
# and are overwhelmingly correct-by-context — a blanket warn there is noise,
# not signal. Audit a specific suspect truncation with `try_into()` instead.
[workspace.lints.rust]
# `--cfg loom` is set via RUSTFLAGS for the kernel-devices loom model-check
# tests (kernel-devices/tests/loom_tx.rs — it models virtio's TX staging).
# Declare it so check-cfg doesn't flag the `#[cfg(loom)]` gates as unexpected.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Exact float compares are intentional in test assertions (computed values
# checked against known-exact expectations); prod logic doesn't do float ==.
float_cmp = "allow"
# Subjective / intentional-style members:
#   unreadable_literal — address/mask constants deliberately mirror the linker
#     script + Sv39 layout; `_` separators would obscure the datasheet match.
#   the rest are taste calls (long-but-cohesive fns, meaningful field prefixes).
unreadable_literal = "allow"
too_many_lines = "allow"
struct_field_names = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# snemu is a tree-walking RV64 interpreter that xtask runs *in-process* (the
# `snemu-boot` / `snemu-diff` / `snemu-fork` subcommands). Its hot fetch-decode-
# execute loop is ~20x slower unoptimized, so an unoptimized snemu dominates the
# wall-clock of every meta-loop run. Optimize *only* this crate — even under the
# default dev build of xtask — so the fast path is fast by default, without
# forcing xtask's heavy dependency tree (ring/rustls/etc.) to recompile in
# release. snemu is deterministic (instruction-count clock), so opt-level changes
# nothing about the guest's execution or telemetry — only how fast snemu runs it.
#
# Debug-assertions/overflow-checks stay ON (dev default) — cheap sanity nets worth
# keeping on a from-scratch emulator. To debug snemu itself (step it, or match
# true-release codegen exactly), temporarily set `opt-level = 0` here.
[profile.dev.package.snemu]
opt-level = 3

# NOTE: opt-pinning the decode path (`protocol` / `postcard`) was tried and
# measured — it moved the "time to N frames" milestone by <5% (within run-to-run
# noise), because that metric is dominated by an O(n²) whole-buffer re-decode in
# `collect_snemu`, not by decode opt-level, and because stepping (already opt-3
# via `snemu`) dominates every bulk-decode tool. Not worth an override; the
# algorithmic fix (incremental decode) is what mattered. Re-add with evidence if a
# genuinely decode-bound path shows up.

[patch.crates-io]
linked_list_allocator = { path = "vendor/linked_list_allocator" }
