[package]
name = "snitchos-abi"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# The alloc-free Pod primitive: `CapDesc` derives `Pod`, so structured syscall
# returns cast to bytes through one audited place (`hitch_pod::pod_bytes`) with a
# derive-checked no-padding guarantee — not a hand-rolled `from_raw_parts`. `Pod`
# is a memory property *below* the ABI, so this is proper layering.
hitch-pod = { path = "../hitch-pod", features = ["derive"] }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
