[package]
name = "collector"
version = "0.0.1"
edition = "2024"
publish = false

[dev-dependencies]
mutants = "0.0.3"

[dependencies]
protocol = { path = "../protocol", features = ["std"] }
clap = { version = "4", features = ["derive"] }
prost = "0.13"
ureq = "2"
fastrand = "2"
tiny_http = "0.12"

[lints]
workspace = true
