[package]
name = "collector"
version = "0.0.1"
edition = "2024"
publish = false

[dev-dependencies]
mutants = "0.0.3"

[dependencies]
protocol = { path = "../protocol", features = ["std"] }
snitchos-abi = { path = "../abi" }
clap = { version = "4", features = ["derive"] }
prost = "0.13"
ureq = "2"
tiny_http = "0.12"

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
