[package]
name = "diagram"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# Runtime (B2) targets fold a decoded telemetry stream; `OwnedFrame` lives here.
protocol = { path = "../protocol", features = ["std"] }
# Static (B1) targets parse `cargo metadata --format-version 1` JSON.
serde_json = "1"

[lints]
workspace = true
