[package]
name = "diagram"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
# Runtime (B2) targets fold a decoded telemetry stream; `OwnedFrame` lives here.
protocol = { path = "../protocol", features = ["std"] }
# Static (B1) targets parse `cargo metadata --format-version 1` JSON.
serde_json = "1"
# `CAP_NAME_LEN` — the fixed width of the cap-name byte array on `CapEvent`.
snitchos-abi = { path = "../abi" }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
