[package]
name = "fs-proto"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
fs-core = { path = "../fs-core" }
snitchos-abi = { path = "../abi" }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
