[package]
name = "hitch"
version = "0.0.1"
edition = "2024"
publish = false

[features]
default = []
# Host-side conveniences (e.g. Frame/Value bridges, pretty-printing) that want
# `std`. Off by default so userspace and the interpreter keep building no_std.
std = []

[dependencies]
# The codec is postcard at two levels (see README): postcard the domain value
# (packed) or postcard the self-describing `Value` (married to its schema).
# Both are already in the workspace tree via `protocol`, so Hitch adds nothing
# new to the kernel/userspace builds.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
# The packed-encoding tests assert byte-identity with postcard of an equivalent
# Rust struct — so they serialize one directly.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[lints]
workspace = true
