[package]
name = "itest-harness"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", default-features = false, features = ["std", "serde-well-known", "formatting", "parsing"] }
prost = "0.13"
ureq = "2"

[dev-dependencies]
time = { version = "0.3", default-features = false, features = ["std", "serde-well-known", "formatting", "parsing", "macros"] }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
