[package]
name = "kernel-core"
version = "0.0.1"
edition = "2024"
publish = false

# This crate holds no code — it re-exports the five kernel-* crates so
# `kernel_core::…` paths keep resolving while the split lands. The final step of
# `plans/kernel-core-split.md` deletes it. Nothing should be added here.
[dependencies]
kernel-boot = { path = "../kernel-boot" }
kernel-devices = { path = "../kernel-devices" }
kernel-mem = { path = "../kernel-mem" }
kernel-obs = { path = "../kernel-obs" }
kernel-proc = { path = "../kernel-proc" }

[lints]
workspace = true
