[package]
name = "kernel-devices"
version = "0.0.1"
edition = "2024"
publish = false

# Dependency-free, and deliberately so: these are the *sequencing* state machines
# behind the drivers (virtqueue rings, the fw_cfg DMA handshake, the ramfb config
# blob), not the drivers themselves. They speak to hardware, not to the wire — so
# nothing here needs `protocol`/`postcard`, and this crate never waits on the
# serde/syn proc-macro chain to build.
[dependencies]

# loom is pulled in ONLY under `--cfg loom` (the model-check test run); normal
# `cargo test` and the kernel build never see it. See tests/loom_tx.rs — it models
# the virtio TX staging critical section, so it lives with `virtio`.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lints]
workspace = true
