[package]
name = "kernel-mem"
version = "0.0.1"
edition = "2024"
publish = false

# Deliberately dependency-free. The memory bookkeeping is pure `core` + `alloc`
# arithmetic over caller-supplied storage — it has no wire format, no ABI, and no
# device to talk to. Keeping it that way is what lets it compile in parallel with
# every other crate instead of waiting on the `protocol`/`serde` proc-macro chain.
[dependencies]

# Selects the physical RAM base: default is QEMU `virt` (0x8000_0000); `vf2`
# switches to the VisionFive 2 / JH7110 (0x4000_0000). Off by default so the
# QEMU/snemu test gate is unaffected. See `mmu::RAM_BASE`.
[features]
vf2 = []

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
