[package]
name = "kernel"
version = "0.0.1"
edition = "2024"
publish = false

[features]
default = []
# Umbrella for the runtime-selectable workload registry. Additive
# only: with no `workload=` bootarg an `itest-workloads` kernel runs
# the exact default demo, so the integration suite can build one
# binary and select per-scenario via QEMU `-append`. Production builds
# leave this off (no test/destructive workloads compiled in). See
# `docs/runtime-workload-selection-design.md`.
itest-workloads = []
# Console-out smoke for the snemu emulator: `kmain` writes a fixed greeting
# straight to the ns16550a UART and halts, before `mmu::enable` — so it runs
# under an emulator that has no Sv39 yet (snemu milestone 1). Never in default
# builds.
minimal-boot = []

[dependencies]
fdt = "0.1.5"
spin = "0.10"
protocol = { path = "../protocol" }
postcard = { version = "1", default-features = false }
kernel-core = { path = "../kernel-core" }
snitchos-abi = { path = "../abi" }
# `pod_bytes` — the one audited byte cast for `CapDesc`-shaped syscall returns.
hitch-pod = { path = "../hitch-pod" }
linked_list_allocator = { version = "0.10", default-features = false }
# Lock-free SPSC ring for the `workload=smp-spsc` variant (v0.6 step 12).
heapless = "0.8"
