[package]
name = "kernel"
version = "0.0.1"
edition = "2024"
publish = false

[features]
default = []
# Umbrella for the runtime-selectable workload registry. Additive
# only: with no `workload=` bootarg an `itest-workloads` kernel runs
# the exact default demo, so the integration suite can build one
# binary and select per-scenario via QEMU `-append`. Production builds
# leave this off (no test/destructive workloads compiled in). See
# `docs/runtime-workload-selection-design.md`.
itest-workloads = []

[build-dependencies]
# Host-only (build script): parse `cargo metadata` to derive the embedded-bin
# dependency closure for `rerun-if-changed`. Does not enter the kernel binary.
serde_json = "1"

[dependencies]
fdt = "0.1.5"
spin = "0.10"
protocol = { path = "../protocol" }
postcard = { version = "1", default-features = false }
kernel-boot = { path = "../kernel-boot" }
kernel-devices = { path = "../kernel-devices" }
kernel-mem = { path = "../kernel-mem" }
kernel-obs = { path = "../kernel-obs" }
kernel-proc = { path = "../kernel-proc" }
snitchos-abi = { path = "../abi" }
# `pod_bytes` — the one audited byte cast for `CapDesc`-shaped syscall returns.
hitch-pod = { path = "../hitch-pod" }
linked_list_allocator = { version = "0.10", default-features = false }
# Lock-free SPSC ring for the `workload=smp-spsc` variant (v0.6 step 12).
heapless = "0.8"
