[package]
name = "kernel"
version = "0.0.1"
edition = "2024"
publish = false

[features]
default = []
# Umbrella for the runtime-selectable workload registry. Additive
# only: with no `workload=` bootarg an `itest-workloads` kernel runs
# the exact default demo, so the integration suite can build one
# binary and select per-scenario via QEMU `-append`. Production builds
# leave this off (no test/destructive workloads compiled in). See
# `docs/runtime-workload-selection-design.md`.
itest-workloads = []
# Print a `hb <n>` liveness pulse per heartbeat on the board's human UART.
# Off by default: the kernel and userspace `ConsoleWrite` share that UART with no
# arbitration, so the pulse shreds any workload that owns the console (the Stitch
# REPL). Turn on for a headless board bring-up where liveness is otherwise
# invisible. Retires when M2/B3 moves the heartbeat to the telemetry channel.
board-heartbeat-print = []
# Target the VisionFive 2 / JH7110: RAM base 0x4000_0000 instead of QEMU's
# 0x8000_0000. Selects `kernel_mem::mmu::RAM_BASE` and the generated linker script's
# load/link addresses (`build.rs`). Off by default (QEMU `virt`); untested in CI
# until board bring-up. See plans/legacy/vf2-b6-multihart.md and B2 in
# plans/visionfive2-port.md.
vf2 = ["kernel-mem/vf2"]

[build-dependencies]
# Host-only (build script): parse `cargo metadata` to derive the embedded-bin
# dependency closure for `rerun-if-changed`. Does not enter the kernel binary.
serde_json = "1"

[dependencies]
fdt = "0.1.5"
spin = "0.10"
protocol = { path = "../protocol" }
postcard = { version = "1", default-features = false }
kernel-boot = { path = "../kernel-boot" }
kernel-devices = { path = "../kernel-devices" }
kernel-mem = { path = "../kernel-mem" }
kernel-obs = { path = "../kernel-obs" }
kernel-proc = { path = "../kernel-proc" }
snitchos-abi = { path = "../abi" }
# `pod_bytes` — the one audited byte cast for `CapDesc`-shaped syscall returns.
hitch-pod = { path = "../hitch-pod" }
linked_list_allocator = { version = "0.10", default-features = false }
# Lock-free SPSC ring for the `workload=smp-spsc` variant (v0.6 step 12).
heapless = "0.8"

# The kernel takes the workspace pedantic lints like everything else. It was the
# last holdout, exempted on a reason ("pedantic fights register/address idioms")
# that measured false — the `cast_*` / `unreadable_literal` allows already absorb
# that friction, and what remained was ordinary style.
#
# Caveat that outlives the opt-in: do NOT blanket `clippy --fix` this crate. The
# `deref_addrof` autofix rewrites the required `&mut *(&raw mut STATIC)` idiom
# into a forbidden direct `&mut STATIC`. Scope any fix to a named lint.
[lints]
workspace = true
