[workspace]
resolver = "2"
members = [
    "toy-allocator",
    "toy-pagetable",
    # More toy crates get added here as we build them (toy-scheduler,
    # toy-virtqueue, ...). Each is a standalone, host-tested crate that
    # isolates one kernel concept so you can play with it without the
    # rest of the OS in the way.
]
