[package]
name = "protocol"
version = "0.0.1"
edition = "2024"
publish = false

[features]
default = []
# Enables `protocol::stream` — `std::io::Read`-driven decoder and the
# allocating `OwnedFrame` type. Off by default so the kernel keeps
# building no_std.
std = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
# For `CAP_NAME_LEN` + `name_str` — the `CapEvent` frame carries an object name
# the same way `CapDesc` does. `no_std`, no transitive deps; leaf crate, no cycle.
snitchos-abi = { path = "../abi" }

[dev-dependencies]
# Golden-bytes snapshot of the on-wire encoding (`tests/wire_stability.rs`), so a
# variant/field reorder — which roundtrip tests can't catch — must be deliberately
# re-blessed. `to_allocvec` needs `alloc`, on for the host test build. serde +
# snitchos-abi are re-declared here so the `tests/` integration crate can name
# `serde::Serialize` (the encode bound) and `CAP_NAME_LEN`.
insta = "1"
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive"] }
snitchos-abi = { path = "../abi" }

[lints]
workspace = true

[lib]
# No doctests in this crate; doctest=false keeps `cargo test` off the slow
# rustdoc doc-test compile. The gate runs nextest (never runs doctests) — see
# CLAUDE.md "use nextest". Add doctest=false to any new lib crate too.
doctest = false
